--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "@sveltejs/adapter-node": "^1.0.0-next.67",
     "bcrypt": "^5.0.1",
     "uuid": "^8.3.2"
-  }
+  },
+  "engines": {    
+    "node": "16.x",
+    "npm": "8.x"
+}
+
 }
