--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.67",
+    "@sveltejs/adapter-node": "^1.0.0-next.8",
+    "@sveltejs/kit": "^1.0.0-next.239",
     "bcrypt": "^5.0.1",
     "uuid": "^8.3.2"
   },
   "engines": {    
-    "node": "16.x",
+    "node": "17.x",
     "npm": "8.x"
 }
 
