--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "start": "node build/index.js"  },
+    "start": "node build/index.js"
+  },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "^1.0.0-next.239",
@@ -37,11 +38,11 @@
     "@sveltejs/adapter-node": "^1.0.0-next.8",
     "@sveltejs/kit": "^1.0.0-next.239",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.1",
     "uuid": "^8.3.2"
   },
-  "engines": {    
+  "engines": {
     "node": "17.x",
     "npm": "8.x"
-}
-
+  }
 }
